@@ -379,7 +379,9 @@ table tr th:last-child, table tr td:last-child {
 }
 .pod ul ul { margin-bottom: 0; }
 .posts.post-list { list-style: none; overflow: hidden; }
-.prompt { font-size: 14px; .serif-regular; }
+.prompt {
+   display: inline-block; font-size: 14px; min-width: 100px; .serif-regular;
+}
 .pull-left  { float: left;  text-align: left;  }
 .pull-right { float: right; text-align: right; }
 .responsive-collapse {
