@@ -2,10 +2,10 @@
 <form action="[% links.base_uri %]login"
      enctype="application/x-www-form-urlencoded"
       method="post" name="login-user">
-   <label for="username">[% loc( 'User name' ) %]</label>
+   <label  class="prompt" for="username">[% loc( 'User name' ) %]</label>
    <input  class="standard-field" name="username" type="textfield"
            value="[% page.username %]"><br/>
-   <label for="password">[% loc( 'Password' ) %]</label>
+   <label  class="prompt" for="password">[% loc( 'Password' ) %]</label>
    <input  class="standard-field" name="password" type="password">
    <button class="btn btn-submit" name="_method" type="submit"
            value="login">[% loc( 'Login' ) %]</button>
